Add many component file

--- a/monitor.html
+++ b/monitor.html
@@ -87,7 +87,7 @@ body {
             xxx-xxxxxxxxxx eNB Log
           </div>
           <div class="card-body" style="padding: 0px">
-            <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" style="height: 700px;"></textarea>
+            <textarea class="form-control rounded-0" id="exampleFormControlTextarea2" rows="3" style="height: 700px; box-shadow: none;"></textarea>
           </div>
         </div>
       </div>
