--- a/bsList.html
+++ b/bsList.html
@@ -8,7 +8,8 @@
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css' />
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Anton&family=Fredoka+One&display=swap" rel="stylesheet">
-
+  <link href="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/css/bootstrap4-toggle.min.css" rel="stylesheet">
+  <!-- <script src="./enbModal.js"></script> -->
 </head>
 <style>
 nav * {
@@ -29,6 +30,7 @@ body {
 }
 .navbar-custom {
   background-color: #c2f9ff;
+  /* background-color: #87f3ff; */
 }
 
 .inputText {
@@ -53,6 +55,66 @@ input {
   padding: 5px;
 }
 
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input { 
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 </style>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
@@ -74,9 +136,12 @@ input {
     <a id="logout" href="index.html">logout</a>
   </nav>
   <div id="app" class="container-fluid container-custom-width my-3">
-  <enbmodal></enbmodal>
+  <edit-enbmodal :cbsd="tempDetailEnb.sn" :detail="tempDetailEnb.detail"></edit-enbmodal>
+  <new-enbmodal></new-enbmodal>
+  <detail-enbmodal :cbsd="tempDetailEnb.sn" :detail="tempDetailEnb.detail"></detail-enbmodal>
     <div>
-      <button class="btn btn-primary" @click="openModal" data-toggle="modal" data-target=".bd-example-modal-lg">新增基站</button>
+      <button class="btn btn-primary" @click="openModal('new')" data-toggle="modal" data-target=".bd-example-modal-lg">新增基站</button>
+      <!-- <button class="btn btn-primary" @click="testapi" data-toggle="modal" data-target=".bd-example-modal-lg">只是測試</button> -->
     </div>
     <div class="table-responsive">
       <table class="table table-striped my-3">
@@ -90,15 +155,21 @@ input {
             <th>{{item.ip}}</th>
             <th style="width: 240px;">{{item.cbsdsn}}</th>
             <th>{{item.status}}</th>
-            <th>{{item.RF_status}}</th>
+            <th>{{item.rf === 1}}</th>
             <th>{{item.txpower}}/{{item.maxeirp}}</th>
-            <th>{{item.highfreq}}/{{item.lowfreq}}</th>
+            <th>{{earfcnToFreq(item.earfcndl, item.bandwidth)[0]}}/{{earfcnToFreq(item.earfcndl, item.bandwidth)[1]}}</th>
             <th>{{item.bandwidth}}</th>
             <th style="width: 100px;">{{item.category}}</th>
-            <th style="width: 100px;"><a href="">詳細參數</a></th>
+            <th style="width: 100px;"><button class="btn btn-info" @click="openModal('detail')">Detail</button></th>
             <th style="width: 100px;">
-              <button class="btn btn-outline-info btn-sm" style="width:35px;height:35px;" @click="openModal"><i class="fas fa-edit"></i></button>
-              <button class="btn btn-outline-danger btn-sm" style="width:35px;height:35px;"><i class="fas fa-trash-alt"></i></button>
+              <button class="btn btn-outline-info btn-sm" style="width:35px;height:35px;" @click="openModal('edit',item.cbsdsn)"><i class="fas fa-edit"></i></button>
+              <button class="btn btn-outline-danger btn-sm" style="width:35px;height:35px;" @click="delEnb(item.cbsdsn)"><i class="fas fa-trash-alt"></i></button>
+            </th>
+            <th>
+              <label class="switch">
+                <input type="checkbox">
+                <span class="slider round"></span>
+              </label>
             </th>
           </tr>
         </tbody>
@@ -107,17 +178,21 @@ input {
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-      </script>
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
     integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
+  </script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-    </script>
+  </script>
+  <script src="https://cdn.jsdelivr.net/gh/gitbrent/bootstrap4-toggle@3.6.1/js/bootstrap4-toggle.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="/bsList.js"></script>
-  <script src="/enbModal.js"></script>
+  <script src="/components/newEnbModal.js"></script>
+  <script src="/components/detailEnbModal.js"></script>
+  <script src="/components/editEnbModal.js"></script>
+  <script src="./bsList.js"></script>
+  <!-- <script src="./enbModal.js"></script> -->
 </body>
 </html>
