--- a/dpSet.html
+++ b/dpSet.html
@@ -89,13 +89,13 @@
         </div>
       </div>
       <div class="col mx-4">
-        <h2>MYSQL</h2>
+        <!-- <h2>MYSQL</h2>
         <div class="form-group">
           <label for="usr"><strong>MYSQL user account</strong></label><input type="text" class="form-control" id="usr">
         </div>
         <div class="form-group">
           <label for="usr"><strong>MYSQL password</strong></label><input type="text" class="form-control" id="usr">
-        </div>
+        </div> -->
         <h2>CERTIFICATE</h2>
         <div class="form-group">
           <label for="usr"><strong>root CA</strong></label>
