--- a/dpSet.html
+++ b/dpSet.html
@@ -47,7 +47,7 @@
 </style>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-    <a class="navbar-brand" href="dpSet.html">
+    <a class="navbar-brand" href="monitor.html">
       <img src="assets/horus-eye.svg" width="30" height="30" class="d-inline-block align-top" alt="">
       HORUS DP
     </a>
